# notes-rag

./: .env.example  .env.local.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  aap.py  api.py  ask.py  index.py  local_query.py  pyproject.toml  requirements-local.txt  requirements.txt
