[project]
name = "notes-rag"
version = "0.1.0"
description = "RAG system for markdown notes with VPS deployment"
requires-python = ">=3.11"
dependencies = [
    "chromadb==1.4.0",
    "sentence-transformers==5.2.0",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "python-dotenv==1.2.1",
    "numpy<2.0",
]

[project.optional-dependencies]
local = [
    "ollama==0.6.1",
    "requests==2.32.5",
]
